source/raylib.pas


{Initialize window and OpenGL context}
procedure InitWindow(width, height: Integer; title: PChar); cdecl; external cDllName;
{Check if KEY_ESCAPE pressed or Close icon pressed}
function WindowShouldClose: Boolean; cdecl; external cDllName;
{Close window and unload OpenGL context}
procedure CloseWindow; cdecl; external cDllName;
{Check if window has been initialized successfully}
function IsWindowReady: Boolean; cdecl; external cDllName;
{Check if window is currently fullscreen }
function IsWindowFullscreen: Boolean; cdecl; external cDllName;
{Check if window is currently hidden (only PLATFORM_DESKTOP)}
function IsWindowHidden: Boolean; cdecl; external cDllName;
{Check if window is currently minimized (only PLATFORM_DESKTOP)}
function IsWindowMinimized: Boolean; cdecl; external cDllName;
{Check if window is currently maximized (only PLATFORM_DESKTOP)}
function IsWindowMaximized: Boolean; cdecl; external cDllName;
{Check if window is currently focused (only PLATFORM_DESKTOP)}
function IsWindowFocused: Boolean; cdecl; external cDllName;
{Check if window has been resized last frame}
function IsWindowResized: Boolean;cdecl; external cDllName;
{Check if one specific window flag is enabled}
function IsWindowState(flag: LongWord): Boolean; cdecl; external cDllName;
{Set window configuration state using flags (only PLATFORM_DESKTOP)}
procedure SetWindowState(flags: LongWord); cdecl; external cDllName;
{Clear window configuration state flags}
procedure ClearWindowState(flags: LongWord); cdecl; external cDllName;
{Toggle window state: fullscreen/windowed (only PLATFORM_DESKTOP)}
procedure ToggleFullscreen; cdecl; external cDllName;
{Set window state: maximized, if resizable (only PLATFORM_DESKTOP)}
procedure MaximizeWindow; cdecl; external cDllName;
{Set window state: minimized, if resizable (only PLATFORM_DESKTOP)}
procedure MinimizeWindow; cdecl; external cDllName;
{Set window state: not minimized/maximized (only PLATFORM_DESKTOP)}
procedure RestoreWindow; cdecl; external cDllName;
{Set icon for window (only PLATFORM_DESKTOP)}
procedure SetWindowIcon(image: TImage); cdecl; external cDllName;
{Set title for window (only PLATFORM_DESKTOP)}
procedure SetWindowTitle(title: PChar); cdecl; external cDllName;
{Set window position on screen (only PLATFORM_DESKTOP)}
procedure SetWindowPosition(x, y: Integer); cdecl; external cDllName;
{Set monitor for the current window (fullscreen mode)}
procedure SetWindowMonitor(monitor: Integer); cdecl; external cDllName;
{Set window minimum dimensions (for FLAG_WINDOW_RESIZABLE)}
procedure SetWindowMinSize(width, height: Integer); cdecl; external cDllName;
{Set window dimensions}
procedure SetWindowSize(width, height: Integer);cdecl; external cDllName;
{Set window opacity [0.0f..1.0f] (only PLATFORM_DESKTOP)}
procedure SetWindowOpacity(opacity: Single); cdecl; external cDllName;
{Get native window handle}
function GetWindowHandle: Pointer; cdecl; external cDllName;
{Get current screen width}
function GetScreenWidth: Integer; cdecl; external cDllName;
{Get current screen height}
function GetScreenHeight: Integer; cdecl; external cDllName;
{Get current render width (it considers HiDPI)}
function GetRenderWidth: Integer; cdecl; external cDllName;
{Get current render height (it considers HiDPI)}
function GetRenderHeight: Integer; cdecl; external cDllName;
{Get number of connected monitors}
function GetMonitorCount: Integer; cdecl; external cDllName;
{Get current connected monitor}
function GetCurrentMonitor: Integer; cdecl; external cDllName;
{Get specified monitor position}
function GetMonitorPosition(monitor: Integer): TVector2; cdecl; external cDllName;
{Get specified monitor width (current video mode used by monitor)}
function GetMonitorWidth(monitor: Integer): Integer; cdecl; external cDllName;
{Get specified monitor height (current video mode used by monitor)}
function GetMonitorHeight(monitor: Integer): Integer; cdecl; external cDllName;
{Get specified monitor physical width in millimetres}
function GetMonitorPhysicalWidth(monitor: Integer): Integer; cdecl; external cDllName;
{Get specified monitor physical height in millimetres}
function GetMonitorPhysicalHeight(monitor: Integer): Integer; cdecl; external cDllName;
{Get specified monitor refresh rate}
function GetMonitorRefreshRate(monitor: Integer): Integer; cdecl; external cDllName;
{Get window position XY on monitor}
function GetWindowPosition: TVector2; cdecl; external cDllName;
{Get window scale DPI factor}
function GetWindowScaleDPI: TVector2; cdecl; external cDllName;
{Get the human-readable, UTF-8 encoded name of the primary monitor}
function GetMonitorName(monitor: Integer): PChar; cdecl; external cDllName;
{Set clipboard text content}
procedure SetClipboardText(text: PChar); cdecl; external cDllName;
{Get clipboard text content}
function GetClipboardText: PChar; cdecl; external cDllName;
{Enable waiting for events on EndDrawing(), no automatic event polling}
procedure EnableEventWaiting; cdecl; external cDllName;
{Disable waiting for events on EndDrawing(), automatic events polling}
procedure DisableEventWaiting; cdecl; external cDllName;

(* Custom frame control functions *)
// NOTE: Those functions are intended for advance users that want full control over the frame processing
// By default EndDrawing() does this job: draws everything + SwapScreenBuffer() + manage frame timming + PollInputEvents()
// To avoid that behaviour and control frame processes manually, enable in config.h: SUPPORT_CUSTOM_FRAME_CONTROL

{Swap back buffer with front buffer (screen drawing)}
procedure SwapScreenBuffer; cdecl; external cDllName;
{Register all input events}
procedure PollInputEvents; cdecl; external cDllName;
{Wait for some time (halt program execution) }
procedure WaitTime(ms: Double); cdecl; external cDllName;

(* Cursor-related functions *)

{Shows cursor}
procedure ShowCursor; cdecl; external cDllName;
{Hides cursor}
procedure HideCursor; cdecl; external cDllName;
{Check if cursor is not visible}
function IsCursorHidden: Boolean; cdecl; external cDllName;
{Enables cursor (unlock cursor)}
procedure EnableCursor; cdecl; external cDllName;
{Disables cursor (lock cursor)}
procedure DisableCursor; cdecl; external cDllName;
{Check if cursor is on the current screen.}
function IsCursorOnScreen: Boolean; cdecl; external cDllName;

(* Drawing-related functions *)

{Set background color (framebuffer clear color)}
procedure ClearBackground(color: TColorB); cdecl; external cDllName;
{Setup canvas (framebuffer) to start drawing}
procedure BeginDrawing; cdecl; external cDllName;
{End canvas drawing and swap buffers (double buffering)}
procedure EndDrawing; cdecl; external cDllName;
{Initialize 2D mode with custom camera (2D)}
procedure BeginMode2D(camera: TCamera2D); cdecl; external cDllName;
{Ends 2D mode with custom camera}
procedure EndMode2D; cdecl; external cDllName;
{Initializes 3D mode with custom camera (3D)}
procedure BeginMode3D(camera: TCamera3D); cdecl; external cDllName;
{Ends 3D mode and returns to default 2D orthographic mode}
procedure EndMode3D; cdecl; external cDllName;
{Initializes render texture for drawing}
procedure BeginTextureMode(target: TRenderTexture2D); cdecl; external cDllName;
{Ends drawing to render texture}
procedure EndTextureMode; cdecl; external cDllName;
{Begin custom shader drawing}
procedure BeginShaderMode(shader: TShader); cdecl; external cDllName;
{End custom shader drawing (use default shader)}
procedure EndShaderMode;cdecl; external cDllName;
{Begin blending mode (alpha, additive, multiplied)}
procedure BeginBlendMode(mode: Integer); cdecl; external cDllName;
{End blending mode (reset to default: alpha blending)}
procedure EndBlendMode; cdecl; external cDllName;
{Begin scissor mode (define screen area for following drawing)}
procedure BeginScissorMode(x, y, width, height: Integer); cdecl; external cDllName;
{End scissor mode}
procedure EndScissorMode; cdecl; external cDllName;
{Begin stereo rendering (requires VR simulator)}
procedure BeginVrStereoMode(config: TVrStereoConfig); cdecl; external cDllName;
{End stereo rendering (requires VR simulator)}
procedure EndVrStereoMode; cdecl; external cDllName;

(* VR stereo config functions for VR simulator *)

{Load VR stereo config for VR simulator device parameters}
function LoadVrStereoConfig(device: TVrDeviceInfo): TVrStereoConfig; cdecl; external cDllName;
{Unload VR stereo config }
procedure UnloadVrStereoConfig(config: TVrStereoConfig); cdecl; external cDllName;


(* Shader management functions *)
// NOTE: Shader functionality is not available on OpenGL 1.1

{Load shader from files and bind default locations}
function LoadShader(vsFileName, fsFileName: PChar): TShader; cdecl; external cDllName;
{Load shader from code strings and bind default locations}
function LoadShaderFromMemory(vsCode, fsCode: PChar): TShader;cdecl;external cDllName;
{Get shader uniform location}
function GetShaderLocation(shader: TShader; uniformName: PChar): Integer; cdecl; external cDllName;
{Get shader attribute location}
function GetShaderLocationAttrib(shader:TShader; attribName:PChar): Integer; cdecl; external cDllName;
{Set shader uniform value}
procedure SetShaderValue(shader: TShader; locIndex: Integer; value: Pointer; uniformType: Integer); cdecl; external cDllName;
{Set shader uniform value vector}
procedure SetShaderValueV(shader: TShader; locIndex: Integer; value: Pointer; uniformType, count: Integer); cdecl; external cDllName;
{Set shader uniform value (matrix 4x4)}
procedure SetShaderValueMatrix(shader: TShader; locIndex: Integer; mat:TMatrix); cdecl; external cDllName;
{Set shader uniform value for texture (sampler2d) }
procedure SetShaderValueTexture(shader: TShader; locIndex: Integer; texture: TTexture2D); cdecl; external cDllName;
{Unload shader from GPU memory (VRAM)}
procedure UnloadShader(shader: TShader); cdecl; external cDllName;


(* Screen-space-related functions *)

{Get a ray trace from mouse position}
function GetMouseRay(mousePosition: TVector2; camera: TCamera): TRay; cdecl; external cDllName;
{Get camera transform matrix (view matrix)}
function GetCameraMatrix(camera: TCamera): TMatrix; cdecl; external cDllName;
{Get camera 2d transform matrix}
function GetCameraMatrix2D(camera: TCamera2D): TMatrix; cdecl; external cDllName;
{Get the screen space position for a 3d world space position}
function GetWorldToScreen(position: TVector3; camera: TCamera): TVector2; cdecl; external cDllName;
{Get size position for a 3d world space position}
function GetWorldToScreenEx(position: TVector3; camera: TCamera; width, height: Integer): TVector2; cdecl; external cDllName;
{Get the screen space position for a 2d camera world space position}
function GetWorldToScreen2D(position: TVector2; camera: TCamera2D): TVector2; cdecl; external cDllName;
{Get the world space position for a 2d camera screen space position}
function GetScreenToWorld2D(position: TVector2; camera: TCamera2D): TVector2; cdecl; external cDllName;


(* Timing-related functions *)

{Set target FPS (maximum)}
procedure SetTargetFPS(fps: Integer); cdecl; external cDllName;
{Returns current FPS}
function GetFPS: Integer; cdecl; external cDllName;
{Returns time in seconds for last frame drawn (delta time)}
function GetFrameTime: Single; cdecl; external cDllName;
{Returns elapsed time in seconds since InitWindow()}
function GetTime: Double; cdecl; external cDllName;

(* Misc. functions *)
